tests/invalid/invalid_assignment.c
// FAIL
int main() {
    5 = 6;
    return 0;
}
